--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,15 @@
     <groupId>com.q.hello</groupId>
     <artifactId>hello-db-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>hello-rocksdb</module>
+    </modules>
     <packaging>pom</packaging>
 
     <properties>
+
+        <logback.version>1.2.5</logback.version>
+
         <java.version>1.8</java.version>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
@@ -19,6 +25,19 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.36</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
         </dependency>
     </dependencies>
 </project>
